# veil-vpn

./: .gitignore  .gitmodules  Cargo.toml  README.md  WORLD_ID_PLAN.md  check-balance.sh
boringtun/: Cargo.toml
boringtun-cli/: Cargo.toml
boringtun-cli/src/: main.rs
boringtun/src/: lib.rs
boringtun/src/device/: http_api.rs  mod.rs  ws_bridge.rs  ws_proxy.rs
boringtun/src/payment/: deposit.rs  mod.rs  protocol.rs  quota.rs  settlement.rs  wallet.rs
client/: index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  styles.css
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: ens.rs  lib.rs  main.rs  proxy.rs  vpn.rs
contracts/: .env.example  .gitignore  .gitmodules  README.md  foundry.toml
contracts/broadcast/Deploy.s.sol/11155111/: run-1775298641532.json  (+1 more)
contracts/script/: Deploy.s.sol  DeployLocal.s.sol  DeploySapphire.s.sol  DeploySepolia.s.sol  ReadSubname.s.sol  RegisterSubname.s.sol
contracts/src/tee/: TEEAttestationRegistry.sol
contracts/test/: VPNSubdomainRegistrar.t.sol
protocol/: .env.example
protocol/boringtun/: Cargo.toml
protocol/boringtun-cli/: Cargo.toml
scripts/: README.md  client.sh  gen-keys.sh  package.json  server.sh  test-client-linux.sh  test-client.sh  test-server-linux.sh  test-server.sh  ws-bridge.js
scripts/keys/: client.key  client.pub  server.key  server.pub
tee-service/: .env.example  Dockerfile  ROFL_DEPLOY.md  compose.yaml  entrypoint.sh  package.json  rofl.yaml
tee-service/src/: discover.ts  register.ts
tee-service/src/utils/: ens.ts  sapphire.ts
(+12 files in other folders)
