[workspace]
members = ["protocol/boringtun", "protocol/boringtun-cli"]
exclude = ["client/src-tauri"]

[profile.release]
lto = true        # Enable full link-time optimization.
codegen-units = 1 # Use only 1 codegen-unit to enable full optimizations.

[profile.bench]
lto = true        # Enable full link-time optimization.
codegen-units = 1 # Use only 1 codegen-unit to enable full optimizations.
