[package]
name = "vpntee"
version = "0.1.0"
description = "VPN TEE - Decentralized VPN Client"
authors = []
edition = "2021"

[lib]
name = "vpntee_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
x25519-dalek = { version = "2", features = ["static_secrets", "getrandom"] }
rand_core = { version = "0.6", features = ["getrandom"] }
base64 = "0.22"
tokio-util = "0.7"
thiserror = "1"
log = "0.4"
k256 = { version = "0.13", features = ["ecdsa"] }
sha2 = "0.10"
sha3 = "0.10"
hkdf = "0.12"
hex = "0.4"
dirs = "5"
lazy_static = "1"
tauri-plugin-localhost = "2.3.2"
idkit-core = { path = "../../../worldcoin-idkit/rust/core", features = ["bridge", "native-crypto"] }
